--- a/.devcontainer/mariadb/docker-compose.yaml
+++ b/.devcontainer/mariadb/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
 
     volumes:
-      - ../..:/workspaces:cached
+      - ../../..:/workspaces:cached
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
